# goit-ds-hw-01

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/goit_ds_hw_01/: main.py
src/goit_pycore_hw_08/data/: addressbook.pkl
