[tool.poetry]
name = "goit-ds-hw-01"
version = "0.1.0"
description = "Personal Assistant CLI with Poetry + Docker"
authors = ["Tetiana Starovoyt <starovoyt.tania@lll.kpi.ua>"]
readme = "README.md"
packages = [{ include = "goit_ds_hw_01", from = "src" }]

[tool.poetry.dependencies]
python = "3.13.*"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.poetry.scripts]
personal-assistant = "goit_ds_hw_01.main:cli"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"




